# eru

./: .gitignore  Cargo.toml
src/: main.rs
src/cli/: main.rs
src/common/: lib.rs
src/server/: main.rs  project.rs  readme.md
src/server/projects/: mod.rs  project.rs
src/server/projects/models/: mod.rs  model.rs
src/server/projects/models/collections/: collection.rs  mod.rs
src/server/projects/models/sources/: source.rs
src/server/projects/models/tables/: table.rs
