# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "eru"
version = "0.1.0"
edition = "2021"

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "demo"
path = "src/demo/main.rs"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
datafusion = "36.0.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
